--- a/css/noticeboard.css
+++ b/css/noticeboard.css
@@ -21,7 +21,7 @@ body{
 	background: #000080;
 	color: white;
 	padding: 15px 0px;
-	font-size: 1.5rem;
+	font-size: 1rem;
 }
 
 .movingbody{
